--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="fourlists">
+<html>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
@@ -33,13 +33,16 @@
 <script src="js/UserFactory.js"></script>
 <script src="js/LoginController.js"></script>
 
-<script src="js/HomeFactory.js"></script>
+<script src="js/TaskFactory.js"></script>
+
+<!-- <script src="js/HomeFactory.js"></script> -->
 <script src="js/HomeController.js"></script>
+<script src="js/ModalController.js"></script>
 
 <script src="js/ProfileController.js"></script>
 
 </head>
-<body>
+<body ng-app="fourlists">
 
   <ui-view></ui-view>
 
