--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
   <title>Fourlists</title>
 
   <!-- <link href="lib/ionic/css/ionic.css" rel="stylesheet"> -->
-  <link href="lib/bedrock-base/dist/css/style.min.css?v=0.1.1" rel="stylesheet">
+  <!-- <link href="lib/bedrock-base/dist/css/style.min.css?v=0.1.1" rel="stylesheet"> -->
   <link href="css/style.min.css?v=0.1.2" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material%20Icons" rel="stylesheet">
 
