--- a/www/index.html
+++ b/www/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+
+  <link rel="icon" type="image/png" href="favicon.png">
+
 
   <title>Fourlists</title>
 
@@ -26,6 +29,8 @@
 
 <!-- AngularFire -->
 <script src="lib/angularfire/dist/angularfire.min.js"></script>
+
+<!-- <script src="//cdnjs.cloudflare.com/ajax/libs/angular-filter/0.4.7/angular-filter.js"></script> -->
 
 <!-- your app's js -->
 <script src="js/app.js"></script>
