--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,15 @@
 
   <link rel="icon" type="image/png" href="favicon.png">
 
+  <!-- Color the browser elements -->
+  <!-- Chrome, Firefox OS and Opera -->
+  <meta name="theme-color" content="#ffffff">
+  <!-- Windows Phone -->
+  <meta name="msapplication-navbutton-color" content="#ffffff">
+  <!-- iOS Safari -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
 
   <title>Fourlists</title>
 
