--- a/www/index.html
+++ b/www/index.html
@@ -8,9 +8,9 @@
 
   <!-- Color the browser elements -->
   <!-- Chrome, Firefox OS and Opera -->
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#000000">
   <!-- Windows Phone -->
-  <meta name="msapplication-navbutton-color" content="#ffffff">
+  <meta name="msapplication-navbutton-color" content="#000000">
   <!-- iOS Safari -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
